make <h1> font-size responsive

--- a/main.css
+++ b/main.css
@@ -232,7 +232,7 @@ footer {
 h1 {
 	margin-block-end: 0.6em;
 	line-height: 1.175;
-	font-size: 2.5rem;
+	font-size: calc(2rem * var(--font-size-factor));
 	color: var(--accent-colour);
 	& + * {
 		margin-block-start: 0;
