--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
 	--accent-colour: #a40000;
 	--link-colour: #33f;
 	--link-colour-visited: #a00;
-	--link-colour-active: #a00;
+	--link-colour-active: var(--link-colour-visited);
 }
 @media (prefers-color-scheme: dark) {
 	:root {
@@ -27,10 +27,22 @@
 		--accent-colour: #fff;
 		--link-colour: #f42;
 		--link-colour-visited: #f85;
-		--link-colour-active: #f85;
+		--link-colour-active: var(--link-colour-visited);
 	}
 	h2 {
 		color: var(--accent-colour);
+	}
+}
+@media (prefers-contrast: more) {
+	@media (prefers-color-scheme: dark) {
+		:root {
+			--back-colour: #15202a;
+			--link-colour: #ff7Eb5;
+			--link-colour-visited: #f96;
+		}
+	}
+	#big-red {
+		color: #ff5e5e;
 	}
 }
 
