added styles to condense svg-defs

--- a/main.css
+++ b/main.css
@@ -83,6 +83,11 @@
 	position: absolute;
 	white-space: nowrap;
 }
+#svg-defs {
+	inline-size: 0;
+	block-size: 0;
+	position: absolute;
+}
 
 /* ================= END UTILITIES */ }
 
