--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@
 .visually-hidden {
 	block-size: 1px;
 	inline-size: 1px;
-	position: absolute;
+	position: fixed;
 	overflow: hidden;
 	white-space: nowrap;
 	clip-path: inset(50%);
